video/srs/htr-api-private/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: srs-api-private
spec:
  hostnames:
  - srs-api-private.suffix-automatic-replace
  parentRefs:
  - kind: Gateway
    namespace: gateways
    name: main-private
    sectionName: https-main
  rules:
  - backendRefs:
    - kind: Service
      name: srs
      port: 1985
    filters:
    - type: ResponseHeaderModifier
      responseHeaderModifier:
        set:
        - name: Access-Control-Allow-Origin
          value: '*'
